--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^6.13.0",
+    "@aws-amplify/ui-react-storage": "^3.13.0",
     "aws-amplify": "^6.15.7",
+    "jimp": "^1.6.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router": "^7.9.3"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
